--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-geopy==2.3.0
 pyicloud==1.0.0
-certifi==2023.7.22
-python-dotenv==1.0.0
-gmail-connector==0.7.0
+geopy~=2.4.0
+certifi~=2023.7.22
+gmail-connector
+pydantic[email]~=2.3.0
+pydantic_settings
